Prepare app for Heroku deployment